# modc

./: Cargo.toml  README.md
src/: lib.rs
src/modc_math/: math.rs
src/utils/: error.rs
tests/: mersenne_test.rs  modc_test.rs
